COMP/TrabalhoP1/gramatica.txt
<Programa> → <ListaFuncoes> <BlocoPrincipal>
<ListaFuncoes> → <Funcao> <ListaFuncoes> | ε 
<Funcao> → <TipoRetorno> id (<DeclParametros>) <BlocoPrincipal>
<TipoRetorno> → <Tipo> | void
<DeclParametros> → <Tipo> id <Parametros> | ε
<Parametros> → , <DeclParametros> | ε
<BlocoPrincipal> → {<BlocoPrincipal’>}
<BlocoPrincipal’> → <Declaracoes> <ListaCmd>
<Declaracoes> → <Tipo> <ListaId>; <Declaracoes> | ε
<Tipo> → int | string | double
<ListaId> → id <ListaId’>
<ListaId’> → , <ListaId> | ε
<Bloco> → { <ListaCmd> }
<ListaCmd> → <Comando> <ListaCmd> | ε
<ChamadaFuncao> → id (<ListaParametros>)
<ListaParametros> → <ListaParametros’> | ε
<ListaParametros’> → <Expressao> <ListaParametros’’>
<ListaParametros’’> → , <ListaParametros’> | ε
<Comando> → return <TvzExpressao>;
| if (<ExpressaoLogica>) <Bloco> <Senao>
| while (<ExpressaoLogica>) <Bloco>
| id = <Expressao>;
| print (<Expressao>);
| read (id);
| <ChamadaFuncao>;
<TvzExpressao> → <Expressao> | ε
<Senao> → else <Bloco> | ε
<Expressao> → <ExpressaoAritmetica> | <ExpressaoLogica>
<ExpressaoAritmetica> → <Termo> <OpAritmetico> <ExpressaoAritmetica> | <Termo>
<Termo> → id | constInt | constFloat | constString | (<ExpressaoAritmetica>)
<OpAritmetico> → + | - | * | /
<ExpressaoLogica> → <ExpressaoRelacional> | <ExpressaoLogica> <OpLogico> <ExpressaoRelacional>
<ExpressaoRelacional> → <ExpressaoAritmetica> <OpRelacional> <ExpressaoAritmetica>
<OpRelacional> → < | > | <= | >= | == | /=
<OpLogico> → && | ||
<constInt> → inteiros
<constFloat> → float
<constString> → string
<id> → identificador
